@@ -88,7 +88,7 @@ if ($playerfound)
 
     if ($hasher->CheckPassword ($_POST['pass'], $playerinfo['password']))
     {
-        $ban_result = CheckBan::isBanned ($db, $lang, null, $playerinfo);
+        $ban_result = BntCheckBan::isBanned ($db, $lang, null, $playerinfo);
         if ($ban_result === false ||  (array_key_exists ('ban_type', $ban_result) && $ban_result['ban_type'] === ID_WATCH))
         {
 
