@@ -140,7 +140,7 @@ if ($rs instanceof ADORecordSet)
             }
 
             // Check for banned players.
-            $ban_result = CheckBan::isBanned ($db, $lang, null, $row);
+            $ban_result = BntCheckBan::isBanned ($db, $lang, null, $row);
 
             if ($ban_result === false || (array_key_exists ('ban_type', $ban_result) && $ban_result['ban_type'] === ID_WATCH))
             {
