@@ -160,6 +160,7 @@ return array(
     'BntAdminLog' => $baseDir . '/classes/BntAdminLog.php',
     'BntBigBang' => $baseDir . '/classes/BntBigBang.php',
     'BntBounty' => $baseDir . '/classes/BntBounty.php',
+    'BntCheckBan' => $baseDir . '/classes/BntCheckBan.php',
     'BntCompress' => $baseDir . '/classes/BntCompress.php',
     'BntDb' => $baseDir . '/classes/BntDb.php',
     'BntDefense' => $baseDir . '/classes/BntDefense.php',
@@ -167,6 +168,7 @@ return array(
     'BntFile' => $baseDir . '/classes/BntFile.php',
     'BntIbank' => $baseDir . '/classes/BntIbank.php',
     'BntLinks' => $baseDir . '/classes/BntLinks.php',
+    'BntLogMove' => $baseDir . '/classes/BntLogMove.php',
     'BntLogin' => $baseDir . '/classes/BntLogin.php',
     'BntMines' => $baseDir . '/classes/BntMines.php',
     'BntNews' => $baseDir . '/classes/BntNews.php',
@@ -190,13 +192,11 @@ return array(
     'BntTranslate' => $baseDir . '/classes/BntTranslate.php',
     'BntXml' => $baseDir . '/classes/BntXml.php',
     'CalcLevels' => $baseDir . '/classes/CalcLevels.php',
-    'CheckBan' => $baseDir . '/classes/CheckBan.php',
     'Child' => $vendorDir . '/adodb/adodb-php/tests/test-active-record.php',
     'City' => $vendorDir . '/adodb/adodb-php/tests/test-php5.php',
     'DB' => $vendorDir . '/adodb/adodb-php/adodb-pear.inc.php',
     'DbOp' => $baseDir . '/classes/DbOp.php',
     'Kid' => $vendorDir . '/adodb/adodb-php/tests/test-active-relationsx.php',
-    'LogMove' => $baseDir . '/classes/LogMove.php',
     'MD5Crypt' => $vendorDir . '/adodb/adodb-php/session/crypt.inc.php',
     'PasswordHash' => $vendorDir . '/phpass/PasswordHash.php',
     'Person' => $vendorDir . '/adodb/adodb-php/tests/test-active-record.php',
