@@ -2,7 +2,7 @@
 
 // autoload_real.php @generated by Composer
 
-class ComposerAutoloaderInit376b4bd90c7556508f4b5540c3ea8620
+class ComposerAutoloaderInita0331e1d954a31654ebc7dd45eaf5358
 {
     private static $loader;
 
@@ -19,9 +19,9 @@ class ComposerAutoloaderInit376b4bd90c7556508f4b5540c3ea8620
             return self::$loader;
         }
 
-        spl_autoload_register(array('ComposerAutoloaderInit376b4bd90c7556508f4b5540c3ea8620', 'loadClassLoader'), true, true);
+        spl_autoload_register(array('ComposerAutoloaderInita0331e1d954a31654ebc7dd45eaf5358', 'loadClassLoader'), true, true);
         self::$loader = $loader = new \Composer\Autoload\ClassLoader();
-        spl_autoload_unregister(array('ComposerAutoloaderInit376b4bd90c7556508f4b5540c3ea8620', 'loadClassLoader'));
+        spl_autoload_unregister(array('ComposerAutoloaderInita0331e1d954a31654ebc7dd45eaf5358', 'loadClassLoader'));
 
         $vendorDir = dirname(__DIR__);
         $baseDir = dirname($vendorDir);
